syntax = "proto3";

package configure_transport;

service TimeService {
  rpc GetTime(GetTimeRequest) returns (GetTimeResponse) {}
}

// I have time X 
message GetTimeRequest {
  bytes timestamp = 1;
}

// I have time Y
message GetTimeResponse {
  bytes local_timestamp = 1;
  bytes diff = 2; 
}

// RoundTripLatency -> Diff between Request and Response
// Skew ~ LocalTimestamp - (Timestamp + RoundTripLatency / 2) -> Between Node Get and Node Respond

service ReconfigurationService {
    rpc NewConfig(NewConfigRequest) returns (NewConfigResponse) {} // TODO: Stream response
}

message NewConfigRequest {
    bytes last_applied = 1; // if new T0::default, else last_applied
}

message NewConfigResponse {
    bytes events = 1; // encoded events
}

